# edgebit-agent

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  installer.sh  update-linux-rs.sh
.cargo/: config.toml
.github/edgebit/: build-syft.yaml
.github/workflows/: build.yaml  release.yaml  upload-sbom.yaml
common-defs/: Cargo.toml
common-defs/src/: lib.rs
ebpf/: Cargo.toml  Makefile  maps.h  probes.bpf.c
ebpf/src/: bindings.rs  main.rs  vmlinux.rs
edgebit-agentd/: Cargo.toml  build.rs
edgebit-agentd/.cargo/: config.toml
edgebit-agentd/src/: control_plane.rs  main.rs  open_monitor.rs
server-stub/: Cargo.toml
server-stub/src/: main.rs
src/: common_defs.rs  lib.rs
src/agent/: cgroup.rs  chroot_cmd.rs  config.rs  containers.rs  control_plane.rs  fanotify.rs  jitter.rs  label.rs  main.rs  open_monitor.rs  platform.rs  registry.rs  sbom.rs  scoped_path.rs  workload_mgr.rs
src/agent/cloud_metadata/: azure.rs  ec2.rs  gce.rs  mod.rs
src/agent/containers/: docker.rs  k8s_containerd.rs  mod.rs  podman.rs
src/agent/workloads/: containers.rs  host.rs  in_use.rs  mod.rs
src/agentd/: control_plane.rs  main.rs  open_monitor.rs  registry.rs  sbom.rs
src/bpf/: maps.h  probes.bpf.c
src/server-stub/: main.rs
xtask/src/: build_ebpf.rs  codegen.rs  main.rs  run.rs
