[package]
name = "edgebit-agent"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
json = "0.12"
tokio = { version = "1.26", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "fs"] }
bytes = "1.3"
bytemuck = { version = "1.12", features = ["derive"] }
prost = "0.11"
prost-types = "0.11"
tower = "0.4"
tonic = { version = "0.8", features = ["transport", "tls", "tls-webpki-roots"] }
gethostname = "0.4"
libbpf-rs = { version = "0.19.1", features = ["static"] }
futures = "0.3"
async-stream = "0.3"
temp-file = "0.1"
rs-release = "0.1.9"
uuid = { version = "1.3.0", features = ["v4"] }
bollard = "0.14"
podman-api = "0.9"
containerd-client = { git = "https://github.com/containerd/rust-extensions.git", rev = "ba111e55aaf3829964730287ae9f96d0088b4c18" }
lazy_static = "1.4"
regex = "1.7"
fanotify-rs = { git = "https://github.com/eyakubovich/fanotify-rs.git", rev = "aca76327e9c1550057e831275354d00104222b3a" }
chrono = { version = "0.4.23", features = ["std"] }
serde_yaml = "0.9.17"
realpath-ext = "0.1.2"
async-trait = "0.1.66"
nix = { version = "0.26", features = ["resource", "fs"] }
tokio-pipe = "0.2.12"

[build-dependencies]
tonic-build = "0.8"
libbpf-cargo = "0.13.1"

[[bin]]
name = "edgebit-agent"
path = "src/agent/main.rs"

[[bin]]
name = "server-stub"
path = "src/server-stub/main.rs"

[package.metadata.libbpf]
#prog_dir = "ebpf/src"  # default: <manifest_directory>/src/bpf
