[package]
name = "edgebit-agentd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
aya = { version = "0.11", features=["async_tokio"] }
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
bytes = "1.3"
bytemuck = "1.12"
prost = "0.11"
tonic = { version = "0.8", features = ["transport", "tls"] }
gethostname = "0.4"

common-defs = { path = "../common-defs", features=["user"] }

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "edgebit-agentd"
path = "src/main.rs"
