[package]
name = "server-stub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync"] }
bytes = "1.3"
prost = "0.11"
tonic = { version = "0.8", features = ["transport", "tls"] }

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "server-stub"
path = "src/main.rs"
